[package]
name = "helix"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
noita_api = {workspace = true}
eyre = {workspace = true}
bevy_tangled = {git = "https://github.com/bgkillas/bevy_tangled", version = "0.2.0", default-features = false, features = ["tangled"]}
bitcode = {git="https://github.com/SoftbearStudios/bitcode", version="0.6.7", branch = "large_c_style_enums"}
tokio = {version = "1.52.1", features = ["full"]}
rand = "0.10.1"

[lints]
workspace = true