[package]
name = "noita_api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
noita_api_macros = {workspace = true}
libloading = "0.9.0"
retour = {version = "0.4.0-alpha.4", features = ["static-detour", "thiscall-abi"]}

[lints]
workspace = true